tests/NormalTests/paczka1/fuzzy1/75544031.err
Error in line 16: b6TC A290 5,6
Error in line 19: 8sPzydSXp A868 35,4
Error in line 32: b6TC A90 17,4
